Stop wrapping of mod author name

--- a/src/style/util.styl
+++ b/src/style/util.styl
@@ -51,3 +51,9 @@
   height: 3px;
   background-color: var(--primary-color);
 }
+
+.nowrap-ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
